App mainly complete, pending comments and readability fix

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@
   top: 25vh;
   height: 50vh;
   width: 15%;
-  padding: 32px 20px;
+  padding: 32px;
 }
 
 .infoSection span{
@@ -68,7 +68,12 @@
 }
 
 .infoSection ul{
-  margin-left: 10%;
+  height: 90%;
+  width: 100%;
+  overflow-y: scroll;
+  text-align: left;
+  padding: 0;
+  margin-left: 12px;
 }
 
 .infoSection li{
@@ -118,6 +123,7 @@
   width: 100%;
   height: 100%;
   padding: 0 10px;
+  background: rgba(255,255,255,0.9);
 }
 
 .searchBar span{
@@ -131,7 +137,8 @@
   position: absolute;
   top: calc(100% + 4px);
   width: 100%;
-  height: auto;
+  max-height: 50vh;
+  overflow-y: scroll;
   z-index: 1;
   border: 1px solid rgba(232,237,231,0.9);
   border-top: none;
@@ -146,6 +153,7 @@
 
 .searchBar .results ul li{
   margin: 8px;
+  cursor: pointer;
 }
 
 .downloads{
